tests/baselines/reference/jsFileCompilationTypeParameterSyntaxOfClassExpression.errors.txt
a.js(1,19): error TS8004: Type parameter declarations can only be used in TypeScript files.


==== a.js (1 errors) ====
    const Bar = class<T> {};
                      ~
!!! error TS8004: Type parameter declarations can only be used in TypeScript files.
    